# scdynsys

./: .gitignore  LICENSE  MANIFEST.in  README.md  fit-vae-CD4.sh  fit-vae-CD8.sh  pyproject.toml  strutident.jl
data/: CD4_counts_Aug23.pkl  CD8_counts_Aug23.pkl  canonical-timeseries-Aug23-CD4.pkl  canonical-timeseries-Aug23-CD8.pkl  init_param_guesses_CD4.json  init_param_guesses_CD8.json  leiden_cluster_annotation_CD4.json  leiden_cluster_annotation_CD8.json  selected-markers-CD4-conv-Aug23.json  selected-markers-CD8-Aug23.json  transfer_expt_data.json  validation-idxs-Aug23-CD4-conv.txt  validation-idxs-Aug23.txt  weight_curves.pkl
notebooks/: BiphasicModels.ipynb  FigureBatchCorrect.ipynb  FigureClusCompare.ipynb  FigureDataOverview.ipynb  FigureIAClusAndFit.ipynb  FigureIAClusFitValiCD4.ipynb  FigureIAValiCD4.ipynb  FigureIAValidation.ipynb  FigureIdentifiability.ipynb  FigureSAClustering.ipynb  FigureSAClusteringCD4.ipynb  FigureSAFitting.ipynb  FigureSAFittingCD4.ipynb  FigureVAEDiagram.ipynb  IdentifiabilityAnalysis.ipynb  InfluxExperiment.ipynb  ModelIdentifiability.ipynb  README.md  SensitivityAnalysis.ipynb  SequentialApproachClusCD4.ipynb  SequentialApproachClustering.ipynb  SequentialApproachFitCD4.ipynb  SequentialApproachFitting.ipynb
pyro-cache/: loss_trace_CD4_modelIII_12clus.pkl  loss_trace_CD8_modelIV_10clus.pkl  settings_CD4_modelIII_12clus.json  settings_CD8_modelIV_10clus.json
resources/: flowchart-integrated.tex  flowchart-sequential-2.tex  ode-diagram-flat.tex
results/: README.md
scdynsys/: clus.py  fetch_data.py  fit_stan_models.py  fit_vae.py  flow.py  identifiability.py  pathways.py  plots.py  projection.py  sensitivity.py  simulate.py  splines.py  stanfit.py  stats.py  utilities.py
scdynsys/stan_models/: cellcounts-only.stan  linear_inhom_DA_model.stan  linreg.stan
scdynsys/stan_models/include/: functions.stan
scdynsys/vae/: bnn.py  dyn.py  err_model.py  gmmdyn.py  layers_gmm.py  mixture_model.py  simpledyn.py  utils.py
tests/: test_Q.py  test_dyn.py  test_identifiability.py  test_ode.py
