[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scdynsys"
version = "0.0.1"
authors = [
  { name="Christiaan H. van Dorp", email="chvandorp@gmail.com" },
]
description = "Fit dynamical models to single-cell data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyro-ppl == 1.9.0",
    "torch == 2.2.1",
    "torchode == 1.0.0",
    "numpy == 1.26.4",
    "scipy == 1.12.0",
    "matplotlib == 3.8.3",
    "tqdm == 4.66.2",
    "scikit-learn == 1.4.1.post1",
    "umap-learn == 0.5.5",
    "anndata == 0.10.6",
    "leidenalg == 0.10.2",
    "openpyxl == 3.1.2",
    "cmdstanpy == 1.2.2",
    "arviz == 0.20.0",
    "networkx == 3.2.1",
    "seaborn == 0.13.2",
    "scanpy == 1.9.8",
    "jupyter == 1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/chvandorp/scdynsys"
"Bug Tracker" = "https://github.com/chvandorp/scdynsys"

[tool.setuptools]
include-package-data = true
packages = ["scdynsys", "scdynsys.vae"]